# traceability

./: .gitignore  CMakeLists.txt  requirements.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  requirements.csv  requirements.dox
docs/scripts/: create_req.py  create_rtm.py  extract_content.py
main/: CMakeLists.txt  main.c
module_a/: CMakeLists.txt  module_a.c  module_a.h
scripts/: create_req.py  create_rtm.py
src/: CMakeLists.txt  main.c  mylib.c  mylib.h
test/: CMakeLists.txt
test/suite_1/: CMakeLists.txt  suite_1.c
